--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -79,4 +79,10 @@
         app:popEnterAnim="@anim/slide_in_bottom"
         app:popExitAnim="@anim/slide_out_top" />
 
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="kr.co.bepo.navigationcomponent.SearchFragment"
+        android:label="@string/search"
+        tools:layout="@layout/fragment_search" />
+
 </navigation>
